bat.string1.lessons.bat.string1.FrontTimes.scala.code
def frontTimes(str:String, n:Int):String = 
{
	var chaine = ""
	var coupe = ""

	str.length match
	{
		case 0 => coupe = ""
		case 1 => coupe = str.substring(int 0, int 1)
		case 2 => coupe = str.substring(int 0, int 2)
		case _ => coupe = str.substring(int 0, int 3)
	}
	
	for(i <- 1 to n)
	{
		chaine = chaine + coupe
	}

	return chaine
}
